@@ -20,6 +20,7 @@ README
 SIGNATURE
 t/data/char1.pyx
 t/data/char2.pyx
+t/data/char3.pyx
 t/data/comment1.pyx
 t/data/comment2.pyx
 t/data/element1.pyx
@@ -36,11 +37,11 @@ t/PYX-SGML-Tags/05-parse-instruction.t
 t/PYX-SGML-Tags/06-parse-comment.t
 t/PYX-SGML-Tags/07-parse-element-sgml.t
 t/PYX-SGML-Tags/08-parse-element-xml.t
-t/PYX-SGML-Tags/09-parse_file-char.t
-t/PYX-SGML-Tags/10-parse_file-instruction.t
-t/PYX-SGML-Tags/11-parse_file-comment.t
-t/PYX-SGML-Tags/12-parse_file-element-sgml.t
-t/PYX-SGML-Tags/13-parse_file-element-xml.t
+t/PYX-SGML-Tags/09-parse_file-raw-char.t
+t/PYX-SGML-Tags/10-parse_file-raw-instruction.t
+t/PYX-SGML-Tags/11-parse_file-raw-comment.t
+t/PYX-SGML-Tags/12-parse_file-raw-element-sgml.t
+t/PYX-SGML-Tags/13-parse_file-raw-element-xml.t
 Tags.pm
 xt/PYX-SGML-Tags/01-pod_coverage.t
 xt/PYX-SGML-Tags/02-pod.t
